--- a/main.ipynb
+++ b/main.ipynb
@@ -102,14 +102,14 @@
     "        veh_ids = env.sumo.vehicle.getIDList()\n",
     "\n",
     "        # Collisions Detection\n",
-    "        collisions = env.sumo.simulation.getCollidingVehiclesIDList()\n",
-    "        if len(collisions) > 0:\n",
-    "            print(f\"Collisions: {collisions}\")\n",
+    "        # collisions = env.sumo.simulation.getCollidingVehiclesIDList()\n",
+    "        # if len(collisions) > 0:\n",
+    "        #     print(f\"Collisions: {collisions}\")\n",
     "\n",
-    "            # Reset env after collision\n",
-    "            obs, info = env.reset()\n",
-    "            print(\"Environment reset.\\n\")\n",
-    "            break\n",
+    "        #     # Reset env after collision\n",
+    "        #     obs, info = env.reset()\n",
+    "        #     print(\"Environment reset.\\n\")\n",
+    "        #     break\n",
     "\n",
     "        # Integrate information from the environment\n",
     "        lane_counter = {}\n",
@@ -163,6 +163,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ppo import ActorCritic\n",
+    "\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# File paths\n",
@@ -177,10 +179,15 @@
     "    single_agent=True,            # one intersection controller\n",
     "    reward_fn='diff-waiting-time',\n",
     "    out_csv_name='outputs/traffic_log'\n",
-    ")\n",
-    "\n",
-    "train_ppo()"
+    ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
