update evaluation metrics 2

--- a/main.ipynb
+++ b/main.ipynb
@@ -222,6 +222,11 @@
     "\n",
     "    obs, info = env.reset()\n",
     "\n",
+    "    appended_rewards=[]\n",
+    "    appended_avg_speeds=[]\n",
+    "    appended_throughputs=[]\n",
+    "    appended_waiting_times=[]\n",
+    "\n",
     "    while global_step < TOTAL_TIMESTEPS:\n",
     "        # 1) 采样一批 rollout\n",
     "        batch = collect_rollout(env, model, N_STEPS)\n",
@@ -234,6 +239,12 @@
     "        dones_arr = batch[\"dones\"]\n",
     "        values_arr = batch[\"values\"]\n",
     "        next_value = batch[\"next_value\"]\n",
+    "\n",
+    "        avg_speeds=batch[\"avg_speeds\"]\n",
+    "        throughputs=batch[\"throughputs\"]\n",
+    "        waiting_times=batch[\"waiting_times\"]\n",
+    "\n",
+    "        \n",
     "\n",
     "        # 2) 计算 GAE & returns\n",
     "        advantages, returns = compute_gae(\n",
@@ -256,7 +267,7 @@
     "        dataset_size = N_STEPS\n",
     "        indices = np.arange(dataset_size)\n",
     "\n",
-    "        \n",
+    "\n",
     "\n",
     "        for epoch in range(N_EPOCHS):\n",
     "            np.random.shuffle(indices)\n",
@@ -297,12 +308,21 @@
     "\n",
     "\n",
     "        # 4) 打印训练信息（粗略统计一下最近一批的平均奖励）\n",
-    "        batch_mean_return = rewards_arr.mean() * N_STEPS  # 很粗略，仅为参考\n",
-    "        print(f\"[Step {global_step}] recent mean reward per step: {rewards_arr.mean():.3f}\")\n",
+    "        batch_rewards_return = rewards_arr.mean()\n",
+    "        batch_speeds_return = avg_speeds.mean()\n",
+    "        batch_throughputs_return = throughputs.mean()\n",
+    "        batch_waiting_times_return = waiting_times.mean()\n",
+    "\n",
+    "        appended_rewards.append(batch_rewards_return)\n",
+    "        appended_avg_speeds.append(batch_speeds_return)\n",
+    "        appended_throughputs.append(batch_throughputs_return)\n",
+    "        appended_waiting_times.append(batch_waiting_times_return)\n",
     "\n",
     "    env.close()\n",
     "    torch.save(model.state_dict(), \"ppo_traffic_signal.pth\")\n",
     "    print(\"Training finished, model saved to ppo_traffic_signal.pth\")\n",
+    "\n",
+    "    return appended_rewards, appended_avg_speeds, appended_throughputs, appended_waiting_times\n",
     "\n"
    ]
   },
