--- a/main.ipynb
+++ b/main.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -832,35 +832,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model_params  = {\n",
-    "#     \"obs_dim\": env.observation_space.shape[0],\n",
-    "#     \"act_dim\": env.action_space.n\n",
-    "# }\n",
-    "\n",
-    "# ppo_model = ActorCritic(**model_params)\n",
-    "# print(\"Model initialized. Starting training...\")\n",
-    "\n",
-    "# train_params = {\n",
-    "#     \"model\": ppo_model,\n",
-    "#     \"env\": env\n",
-    "# }\n",
-    "\n",
-    "# model_hist = train_ppo(**train_params)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## RL agent and validation"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -868,8 +839,110 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>experiment_id</th>\n",
+       "      <th>agent</th>\n",
+       "      <th>last100_avg_reward</th>\n",
+       "      <th>last100_avg_waiting_time</th>\n",
+       "      <th>last100_avg_throughput</th>\n",
+       "      <th>last100_avg_speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>rl</td>\n",
+       "      <td>-5.26965</td>\n",
+       "      <td>5.267362</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>4.660118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>rl</td>\n",
+       "      <td>-3.01510</td>\n",
+       "      <td>6.709005</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>6.692216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>heuristic</td>\n",
+       "      <td>-49.78120</td>\n",
+       "      <td>24.978354</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.595594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>rl</td>\n",
+       "      <td>-2.40440</td>\n",
+       "      <td>2.157408</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>7.372830</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   experiment_id      agent  last100_avg_reward  last100_avg_waiting_time  \\\n",
+       "0              1         rl            -5.26965                  5.267362   \n",
+       "1              2         rl            -3.01510                  6.709005   \n",
+       "2              3  heuristic           -49.78120                 24.978354   \n",
+       "3              4         rl            -2.40440                  2.157408   \n",
+       "\n",
+       "   last100_avg_throughput  last100_avg_speed  \n",
+       "0                    0.47           4.660118  \n",
+       "1                    0.48           6.692216  \n",
+       "2                    0.26           0.595594  \n",
+       "3                    0.42           7.372830  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv(\"results/experiments_summary.csv\")\n",
+    "df[[\"experiment_id\", \"agent\"] + [col for col in df.columns if \"last\" in col]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
