Modify the documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,166 +29,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import numpy as np\n",
-    "import time\n",
-    "\n",
-    "def to_evaluate_agent(\n",
-    "        env=None,\n",
-    "        agent=\"heuristic\",\n",
-    "        steps=1000,\n",
-    "        phase_duration=10,\n",
-    "        render=False,\n",
-    "        seed=42,\n",
-    "        to_save = None):\n",
-    "    \"\"\" Evaluate the performance of a method in given SUMO env.\"\"\"\n",
-    "\n",
-    "    # Initialization  ->  file saving \n",
-    "    sim_records = []\n",
-    "    header = [\n",
-    "        \"step\", \n",
-    "        \"sim_time\",\n",
-    "        \"avg_wait_time\", \n",
-    "        # \"total_wait_time\",\n",
-    "        \"queue_length\",\n",
-    "        \"pressure\",\n",
-    "        \"throughput\",\n",
-    "        \"avg_speed\",\n",
-    "        \"action\",\n",
-    "        \"reward\"]\n",
-    "    \n",
-    "    # Initialization -> simulation loops\n",
-    "    obs, info = env.reset(seed=seed)\n",
-    "    cur_phase, phase_timer, last_arrived = 0,0,0\n",
-    "    done = False \n",
-    "\n",
-    "    for step in range(steps):\n",
-    "        if render: env.render()\n",
-    "\n",
-    "        # debug \n",
-    "        # print(\"Phase Time\" , phase_timer, \"Current Phase: \", cur_phase)\n",
-    "\n",
-    "        #################################\n",
-    "        ###  Action Selection ###\n",
-    "        #################################\n",
-    "        if agent == \"heuristic\":\n",
-    "            # Determine the action\n",
-    "            if phase_timer >= phase_duration: # Pre-defined heuristic method\n",
-    "                cur_phase = (cur_phase + 1) % env.action_space.n\n",
-    "                phase_timer = 0\n",
-    "            action = cur_phase\n",
-    "            phase_timer += 1\n",
-    "        elif agent == \"random\": # Random Method \n",
-    "            action = env.action_space.sample()\n",
-    "        # else: # Trained RL Agent \n",
-    "        #     # action, _ \n",
-    "\n",
-    "        #################################\n",
-    "        ###  Feed action and observe ###\n",
-    "        #################################\n",
-    "        obs, reward, done, _, info = env.step(action)\n",
-    "        sim_time = env.sumo.simulation.getTime()\n",
-    "        # veh_ids = env.sumo.simulation.getIDList()\n",
-    "        # avg_wait_time = info[\"avg_wait_time\"] # Not sure if it is available\n",
-    "\n",
-    "\n",
-    "        #######################################\n",
-    "        ###  Collect and store the metrics ###\n",
-    "        #######################################\n",
-    "        # wait_time_lst = []\n",
-    "        # queue_length = 0\n",
-    "        # lane_veh_counts = {}\n",
-    "\n",
-    "        # for veh in veh_ids:\n",
-    "        #     cur_lane = env.sumo.vehicles.getLaneID(veh)\n",
-    "        #     cur_speed = env.sumo.vehicles.getSpeed(veh)\n",
-    "        #     cur_wait_time = env.sumo.vehicles.getWaitingTime(veh)\n",
-    "\n",
-    "        #     if cur_speed < 0.1:\n",
-    "        #         queue_length += 1\n",
-    "        #     lane_veh_counts[cur_lane] = lane_veh_counts.get(cur_lane, 0) + 1\n",
-    "\n",
-    "        #     # ====== Wait-Time ======\n",
-    "        #     wait_time_lst.append(cur_wait_time)\n",
-    "        #     # ========================\n",
-    "\n",
-    "        # # Pressure\n",
-    "        # pressure = 0\n",
-    "        # for lane, count in lane_veh_counts.items():\n",
-    "        #     if 1:\n",
-    "        #         # num_incoming += count\n",
-    "        #         pressure += count\n",
-    "        #     else:\n",
-    "        #         num_outgoing += count\n",
-    "        #         pressure -= count\n",
-    "\n",
-    "        # Avg wait and total wait\n",
-    "        # avg_wait = np.mean(wait_time_lst) if wait_time_lst else 0\n",
-    "        # total_wait = np.sum(wait_time_lst) if wait_time_lst else 0\n",
-    "\n",
-    "        # Avg speed and total speed\n",
-    "        # avg_speed = np.mean(env.sumo.vehicles.getSpeed(vid) for vid in veh_ids)\n",
-    "        # total_speed = np.sum(env.sumo.vehicles.getSpeed(vid) for vid in veh_ids)\n",
-    "\n",
-    "        # Throughput\n",
-    "        # total_arrived = env.sumo.simulation.getArrivedNumber()\n",
-    "        # throughput = total_arrived - last_arrived\n",
-    "        # last_arrived = total_arrived\n",
-    "\n",
-    "        # Load the records into log\n",
-    "        sim_records.append([\n",
-    "            step,\n",
-    "            sim_time,\n",
-    "            info[\"waiting_time\"],\n",
-    "            info[\"queue_length\"],\n",
-    "            info[\"pressure\"],\n",
-    "            info[\"throughput\"],\n",
-    "            info[\"avg_speed\"],\n",
-    "            action,\n",
-    "            reward])\n",
-    "\n",
-    "        if done:\n",
-    "            obs, info = env.reset(seed=seed)\n",
-    "            last_arrived = 0\n",
-    "        \n",
-    "    env.close()\n",
-    "\n",
-    "    if to_save:\n",
-    "        # supposed: results/***_evaluation_records.csv \n",
-    "        folder = \"results\"\n",
-    "        os.makedirs(folder, exist_ok=True)\n",
-    "\n",
-    "        save_path = os.path.join(folder, f\"{to_save}_evaluation_records.csv\")\n",
-    "\n",
-    "        with open(save_path, \"w\", newline=\"\") as f:\n",
-    "            writer = csv.writer(f)\n",
-    "            writer.writerow(header)\n",
-    "            writer.writerows(sim_records)\n",
-    "        \n",
-    "        print(f\"Evaluation records saved to: {save_path}\")\n",
-    "\n",
-    "        \n",
-    "        return sim_records\n",
-    "\n"
+    "def env_force_quite():\n",
+    "    \"\"\"ArithmeticError: Integer division or modulo by zero: force quite the sumo environment.\"\"\"\n",
+    "    import traci\n",
+    "    try:\n",
+    "        if traci.isLoaded():\n",
+    "            traci.close(False)\n",
+    "    except Exception:\n",
+    "        pass"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Heuristic baseline"
+    "## Environment Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step #40.00 (0ms ?*RT. ?UPS, TraCI: 10188ms, vehicles TOT 34 ACT 30 BUF 0)                \n",
+      " Retrying in 1 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yongchen/Documents/MIE/ECE1508F3/smartTrafficControll_ece1508_group_project/single_intersection.py:48: UserWarning: Call to deprecated function getCompleteRedYellowGreenDefinition, use getAllProgramLogics instead.\n",
+      "  num_phases = len(self.sumo.trafficlight.getCompleteRedYellowGreenDefinition(self.ts_id)[0].phases)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUMO Environment successfully initialized!\n",
+      "Step #0.00 (0ms ?*RT. ?UPS, TraCI: 5ms, vehicles TOT 0 ACT 0 BUF 0)                      \n",
+      " Retrying in 1 seconds\n",
+      "Step: 20, Action: 6, Reward: -13.1, Info: {'avg_speed': np.float64(4.212955851190537), 'throughput': 0, 'waiting_time': np.float64(5.76), 'queue_length': 15, 'pressure': 44}\n",
+      "Step: 40, Action: 1, Reward: -20.7, Info: {'avg_speed': np.float64(2.8065420800688616), 'throughput': 0, 'waiting_time': np.float64(10.372093023255815), 'queue_length': 31, 'pressure': 76}\n",
+      "Step: 60, Action: 4, Reward: -24.0, Info: {'avg_speed': np.float64(0.9436458959870246), 'throughput': 0, 'waiting_time': np.float64(12.557692307692308), 'queue_length': 36, 'pressure': 88}\n",
+      "Step: 80, Action: 6, Reward: -36.599999999999994, Info: {'avg_speed': np.float64(0.4934087844924381), 'throughput': 0, 'waiting_time': np.float64(6.791044776119403), 'queue_length': 54, 'pressure': 116}\n",
+      "Step: 100, Action: 5, Reward: -30.5, Info: {'avg_speed': np.float64(0.8061441963525499), 'throughput': 0, 'waiting_time': np.float64(4.188405797101449), 'queue_length': 36, 'pressure': 118}\n",
+      "Step #200.00 (0ms ?*RT. ?UPS, TraCI: 17ms, vehicles TOT 133 ACT 75 BUF 11)                \n"
+     ]
+    }
+   ],
    "source": [
+    "env_force_quite()\n",
+    "\n",
     "sumo_cmd = [\n",
     "    # \"--start\", # Uncomment this line while using the GUI for visualization \n",
     "    \"--no-warnings\", \"true\", # Uncomment this line to \n",
@@ -206,32 +107,25 @@
     "env = TrafficEnv(\n",
     "    sumo_cmd=sumo_cmd,\n",
     "    tls_id=TLS_ID,\n",
-    "    gui=False   # show SUMO GUI\n",
+    "    gui=False   # Render the environment to set it to True\n",
     ")\n",
+    "if env:\n",
+    "    print(\"SUMO Environment successfully initialized!\")\n",
+    "# Test if the environment is working properly with 100 steps\n",
+    "state = env.reset()\n",
+    "done = False\n",
+    "truncated = False\n",
+    "counter = 100\n",
+    "while not done and not truncated and counter > 0:\n",
+    "    counter -= 1\n",
+    "    action = env.action_space.sample()  # Sample random action\n",
+    "    next_state, reward, done, truncated, info = env.step(action)\n",
+    "    # env.render() # Uncomment this line to visualize the environment\n",
+    "    # Print every 20 steps with the .3 float value of the action\n",
+    "    if counter % 20 == 0:\n",
+    "        print(f\"Step: {100 - counter}, Action: {action}, Reward: {reward}, Info: {info}\")\n",
     "\n",
-    "logs = to_evaluate_agent(\n",
-    "    env=env,\n",
-    "    agent=\"heuristic\",\n",
-    "    steps=100,\n",
-    "    to_save=\"test\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Define the training function\n",
-    "\n",
-    "# import torch.optim as optim\n",
-    "# from ppo import ActorCritic, compute_gae, collect_rollout\n",
-    "# from torch import nn\n",
-    "# from helper_func import plot_traff_metrics\n",
-    "\n",
-    "# Integrate into train.py\n",
-    "\n"
+    "env.close()\n"
    ]
   },
   {
@@ -239,6 +133,226 @@
    "metadata": {},
    "source": [
     "## Training Section"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LR</th>\n",
+       "      <th>Mini-batch</th>\n",
+       "      <th>Clip</th>\n",
+       "      <th>Gamma</th>\n",
+       "      <th>Avg Return</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>-38.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-39.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>-38.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-30.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-32.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>-25.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-30.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>-37.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.00030</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-38.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.00010</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-35.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.00010</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-36.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0.00010</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>-34.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0.00005</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-34.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0.00005</td>\n",
+       "      <td>256</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>-33.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         LR  Mini-batch  Clip  Gamma  Avg Return\n",
+       "0   0.00030          32   0.1   0.95       -38.2\n",
+       "1   0.00030          32   0.1   0.99       -39.5\n",
+       "2   0.00030          32   0.2   0.95       -38.8\n",
+       "3   0.00030          32   0.2   0.99       -30.7\n",
+       "4   0.00030          64   0.2   0.99       -32.9\n",
+       "5   0.00030          64   0.1   0.95       -25.3\n",
+       "6   0.00030          64   0.1   0.99       -30.3\n",
+       "7   0.00030         256   0.2   0.95       -37.6\n",
+       "8   0.00030         256   0.2   0.99       -38.1\n",
+       "9   0.00010          32   0.1   0.99       -35.8\n",
+       "10  0.00010          64   0.2   0.99       -36.5\n",
+       "11  0.00010         256   0.2   0.95       -34.9\n",
+       "12  0.00005          64   0.1   0.99       -34.0\n",
+       "13  0.00005         256   0.2   0.99       -33.6"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from ppo import ActorCritic\n",
+    "from run_experiments import evaluate_agent\n",
+    "import train    \n",
+    "import pandas as pd\n",
+    "\n",
+    "env_force_quite()\n",
+    "\n",
+    "train_model_configs_tuning = {\n",
+    "    \"LR\": [3e-4, 1e-4, 5e-5], \n",
+    "    \"MINI_BATCH_SIZE\": [32, 64, 256],\n",
+    "    \"clip_range\": [0.1, 0.2],\n",
+    "    \"gamma\": [0.95, 0.99],\n",
+    "    \"TOTAL_TIMESTEPS\": 4096 * 4\n",
+    "}\n",
+    "\n",
+    "# Train the agent with hyperparameter tuning\n",
+    "# You can reset the tuning dictionary to tune the parameters you want\n",
+    "# Here we will read the tuned results from a file instead of training again\n",
+    "tuned_results_file = pd.read_csv(\"results/tune_para_summary.csv\", sep=None, engine=\"python\")\n",
+    "tuned_results_file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Config from Tuning:\n",
+      " LR             0.0003\n",
+      "Mini-batch    64.0000\n",
+      "Clip           0.1000\n",
+      "Gamma          0.9500\n",
+      "Avg Return   -25.3000\n",
+      "Name: 5, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_config= tuned_results_file.iloc[tuned_results_file['Avg Return'].idxmax()]\n",
+    "print(\"Best Config from Tuning:\\n\", best_config)\n"
    ]
   },
   {
@@ -2701,11 +2815,7 @@
     "import traci\n",
     "\n",
     "\n",
-    "try:\n",
-    "    if traci.isLoaded():\n",
-    "        traci.close(False)\n",
-    "except Exception:\n",
-    "    pass\n",
+    "\n",
     "\n",
     "# SUMO command configuration\n",
     "sumo_cmd = [\n",
@@ -2742,14 +2852,12 @@
     "    \"MINI_BATCH_SIZE\": 64,\n",
     "    \"TOTAL_TIMESTEPS\": 4096 * 4\n",
     "}\n",
-    "# train_model_configs = {\n",
-    "#     \"LR\": 3e-4,\n",
-    "#     \"N_STEPS\": 16,\n",
-    "#     \"N_EPOCHS\": 2,\n",
-    "#     \"MINI_BATCH_SIZE\": 4,\n",
-    "#     \"TOTAL_TIMESTEPS\": 128\n",
-    "# }\n",
     "\n",
+    "# \"LR\": 3e-4, \n",
+    "# \"N_STEPS\": 256,\n",
+    "# \"N_EPOCHS\": 4,\n",
+    "# \"MINI_BATCH_SIZE\": 64,\n",
+    "# \"TOTAL_TIMESTEPS\": 4096 * 4\n",
     "\n",
     "results = run_experiments(\n",
     "    sumo_cmd=sumo_cmd,\n",
