added guidance to main notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Smart Traffic Signal Control – Experiment Notebook\n",
+    "\n",
+    "This notebook tests the SUMO-based single-intersection environment,\n",
+    "trains a PPO agent, and runs experiments under different reward\n",
+    "functions and noise settings."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Environment Setup & Utilities\n",
+    "\n",
+    "In this section, we:\n",
+    "\n",
+    "- import all required libraries and project modules  \n",
+    "- verify the `SUMO_HOME` path  \n",
+    "- define utility functions to safely close the SUMO environment"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +71,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Environment Testing"
+    "## 2. Environment Sanity Check\n",
+    "\n",
+    "Here we create a basic SUMO environment and run a short random\n",
+    "policy (e.g., 100 steps) to verify that:\n",
+    "\n",
+    "- the environment can be initialized without errors  \n",
+    "- state, reward, and info are returned in the expected format  \n",
+    "- basic traffic metrics (queue length, waiting time, pressure, etc.) are logged correctly\n"
    ]
   },
   {
@@ -132,7 +163,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Training Section"
+    "## 3. PPO Training & Hyperparameter Tuning\n",
+    "\n",
+    "In this part, we focus on training the PPO agent:\n",
+    "\n",
+    "- We define the search space for key hyperparameters \n",
+    "  (learning rate, mini-batch size, clipping range, and discount factor γ).\n",
+    "- Instead of re-running all tuning experiments here, we load the\n",
+    "  summary file `results/tune_para_summary.csv`.\n",
+    "- We select the best configuration based on the highest **average return**\n",
+    "  and print it out for later experiments.\n"
    ]
   },
   {
@@ -359,7 +399,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Here we build the different environment first"
+    "## 4. Experiment Configuration\n",
+    "\n",
+    "### 4.1 Environment Variants\n",
+    "  - with injected noise in observations,\n",
+    "  - without noise (default)."
    ]
   },
   {
@@ -411,6 +455,16 @@
     "# Check if the environment is working \n",
     "obs, info = env.reset()\n",
     "print(f\"Environment {env.__class__.__name__} setup complete. \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Reward & Training Configurations\n",
+    "- A set of **reward configurations** to focus on different objectives\n",
+    "  (queue reduction, pressure reduction, throughput, etc.).  \n",
+    "- The list of **noise options** (`True` / `False`) to compare robustness.  "
    ]
   },
   {
@@ -2879,12 +2933,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Performance Evaluation"
+    "## 5. Performance Evaluation\n",
+    "\n",
+    "In this section, we summarize and evaluate the performance of all\n",
+    "completed experiments. We load:\n",
+    "\n",
+    "- the experiment summary CSV (`experiments_summary.csv`),  \n",
+    "- detailed evaluation logs for each experiment,  \n",
+    "- and compute aggregated statistics such as average reward, waiting time,\n",
+    "  throughput, and queue length.\n",
+    "\n",
+    "This allows us to compare different reward functions, noise settings, and\n",
+    "agent types (heuristic vs PPO).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3087,8 +3152,7 @@
    "source": [
     "import pandas as pd\n",
     "df_exp_summary = pd.read_csv(\"results/experiments_summary.csv\")\n",
-    "df_exp_summary[[\"experiment_id\", \"agent\"] + [col for col in df_exp_summary.columns if \"avg\" in col]]\n",
-    "\n"
+    "df_exp_summary[[\"experiment_id\", \"agent\"] + [col for col in df_exp_summary.columns if \"avg\" in col]]"
    ]
   },
   {
@@ -3108,6 +3172,26 @@
     "# df_exp6 = pd.read_csv(\"results/stage1\")\n",
     "# df_exp7 = pd.read_csv(\"results/stage1\")\n",
     "# df_exp8 = pd.read_csv(\"results/stage1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Experiment Comparison\n",
+    "\n",
+    "In this section, we compare different experiments across key traffic\n",
+    "metrics. This helps identify which reward design and noise condition\n",
+    "produces the best traffic control policy.\n",
+    "\n",
+    "We compare the following metrics:\n",
+    "\n",
+    "- **Reward** (stability & learning quality)  \n",
+    "- **Queue Length** (congestion control)  \n",
+    "- **Throughput** (intersection efficiency)  \n",
+    "\n",
+    "Each plot shows:  \n",
+    "raw curves, the current running average, and 100-step rolling averages.\n"
    ]
   },
   {
@@ -3219,7 +3303,7 @@
     "        \"exp7\": \"results/stage2_exp7_heuristic_default_noiseFalse_evaluation_records.csv\",\n",
     "        \"exp8\": \"results/stage2_exp8_rl_default_noiseFalse_evaluation_records.csv\",\n",
     "    },\n",
-    "    metric=\"reward\"，\n",
+    "    metric=\"reward\"\n",
     "    \n",
     ")"
    ]
